src/grammar/ShieldParser.js
// Generated from Shield.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ShieldListener = require('./ShieldListener').ShieldListener;
var ShieldVisitor = require('./ShieldVisitor').ShieldVisitor;

var grammarFileName = "Shield.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'import'", "'schema'", "'{'", "';'", "'}'", 
                     "'.'", "'allow'", "','", "'delete'", "'forbid'", "'*'", 
                     "':'", "'or'", "'('", "')'", "'g'", "'i'", "'m'", "'u'", 
                     "'y'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, "NUM", "STRING_BACKTICK", "STRING_DOUBLE", 
                      "STRING_SINGLE", "REGEX_LITERAL", "ID" ];

var ruleNames =  [ "validationSchema", "importDecl", "string", "schemaDecl", 
                   "deviationDecl", "stmt", "orClause", "constraint", "expr" ];

function ShieldParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ShieldParser.prototype = Object.create(antlr4.Parser.prototype);
ShieldParser.prototype.constructor = ShieldParser;

Object.defineProperty(ShieldParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ShieldParser.EOF = antlr4.Token.EOF;
ShieldParser.T__0 = 1;
ShieldParser.T__1 = 2;
ShieldParser.T__2 = 3;
ShieldParser.T__3 = 4;
ShieldParser.T__4 = 5;
ShieldParser.T__5 = 6;
ShieldParser.T__6 = 7;
ShieldParser.T__7 = 8;
ShieldParser.T__8 = 9;
ShieldParser.T__9 = 10;
ShieldParser.T__10 = 11;
ShieldParser.T__11 = 12;
ShieldParser.T__12 = 13;
ShieldParser.T__13 = 14;
ShieldParser.T__14 = 15;
ShieldParser.T__15 = 16;
ShieldParser.T__16 = 17;
ShieldParser.T__17 = 18;
ShieldParser.T__18 = 19;
ShieldParser.T__19 = 20;
ShieldParser.NUM = 21;
ShieldParser.STRING_BACKTICK = 22;
ShieldParser.STRING_DOUBLE = 23;
ShieldParser.STRING_SINGLE = 24;
ShieldParser.REGEX_LITERAL = 25;
ShieldParser.ID = 26;

ShieldParser.RULE_validationSchema = 0;
ShieldParser.RULE_importDecl = 1;
ShieldParser.RULE_string = 2;
ShieldParser.RULE_schemaDecl = 3;
ShieldParser.RULE_deviationDecl = 4;
ShieldParser.RULE_stmt = 5;
ShieldParser.RULE_orClause = 6;
ShieldParser.RULE_constraint = 7;
ShieldParser.RULE_expr = 8;

function ValidationSchemaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ShieldParser.RULE_validationSchema;
    return this;
}

ValidationSchemaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ValidationSchemaContext.prototype.constructor = ValidationSchemaContext;

ValidationSchemaContext.prototype.schemaDecl = function() {
    return this.getTypedRuleContext(SchemaDeclContext,0);
};

ValidationSchemaContext.prototype.importDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ImportDeclContext);
    } else {
        return this.getTypedRuleContext(ImportDeclContext,i);
    }
};

ValidationSchemaContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterValidationSchema(this);
	}
};

ValidationSchemaContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitValidationSchema(this);
	}
};

ValidationSchemaContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitValidationSchema(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ShieldParser.ValidationSchemaContext = ValidationSchemaContext;

ShieldParser.prototype.validationSchema = function() {

    var localctx = new ValidationSchemaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ShieldParser.RULE_validationSchema);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 21;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===ShieldParser.T__0) {
            this.state = 18;
            this.importDecl();
            this.state = 23;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 24;
        this.schemaDecl();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ImportDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ShieldParser.RULE_importDecl;
    this.source = null; // StringContext
    return this;
}

ImportDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImportDeclContext.prototype.constructor = ImportDeclContext;

ImportDeclContext.prototype.string = function() {
    return this.getTypedRuleContext(StringContext,0);
};

ImportDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterImportDecl(this);
	}
};

ImportDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitImportDecl(this);
	}
};

ImportDeclContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitImportDecl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ShieldParser.ImportDeclContext = ImportDeclContext;

ShieldParser.prototype.importDecl = function() {

    var localctx = new ImportDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ShieldParser.RULE_importDecl);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 26;
        this.match(ShieldParser.T__0);
        this.state = 27;
        localctx.source = this.string();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StringContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ShieldParser.RULE_string;
    return this;
}

StringContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StringContext.prototype.constructor = StringContext;


 
StringContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function TemplateStringContext(parser, ctx) {
	StringContext.call(this, parser);
    StringContext.prototype.copyFrom.call(this, ctx);
    return this;
}

TemplateStringContext.prototype = Object.create(StringContext.prototype);
TemplateStringContext.prototype.constructor = TemplateStringContext;

ShieldParser.TemplateStringContext = TemplateStringContext;

TemplateStringContext.prototype.STRING_BACKTICK = function() {
    return this.getToken(ShieldParser.STRING_BACKTICK, 0);
};
TemplateStringContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterTemplateString(this);
	}
};

TemplateStringContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitTemplateString(this);
	}
};

TemplateStringContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitTemplateString(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function DoubleQuotedStringContext(parser, ctx) {
	StringContext.call(this, parser);
    StringContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DoubleQuotedStringContext.prototype = Object.create(StringContext.prototype);
DoubleQuotedStringContext.prototype.constructor = DoubleQuotedStringContext;

ShieldParser.DoubleQuotedStringContext = DoubleQuotedStringContext;

DoubleQuotedStringContext.prototype.STRING_DOUBLE = function() {
    return this.getToken(ShieldParser.STRING_DOUBLE, 0);
};
DoubleQuotedStringContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterDoubleQuotedString(this);
	}
};

DoubleQuotedStringContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitDoubleQuotedString(this);
	}
};

DoubleQuotedStringContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitDoubleQuotedString(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function SingleQuotedStringContext(parser, ctx) {
	StringContext.call(this, parser);
    StringContext.prototype.copyFrom.call(this, ctx);
    return this;
}

SingleQuotedStringContext.prototype = Object.create(StringContext.prototype);
SingleQuotedStringContext.prototype.constructor = SingleQuotedStringContext;

ShieldParser.SingleQuotedStringContext = SingleQuotedStringContext;

SingleQuotedStringContext.prototype.STRING_SINGLE = function() {
    return this.getToken(ShieldParser.STRING_SINGLE, 0);
};
SingleQuotedStringContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterSingleQuotedString(this);
	}
};

SingleQuotedStringContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitSingleQuotedString(this);
	}
};

SingleQuotedStringContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitSingleQuotedString(this);
    } else {
        return visitor.visitChildren(this);
    }
};



ShieldParser.StringContext = StringContext;

ShieldParser.prototype.string = function() {

    var localctx = new StringContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ShieldParser.RULE_string);
    try {
        this.state = 32;
        switch(this._input.LA(1)) {
        case ShieldParser.STRING_SINGLE:
            localctx = new SingleQuotedStringContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 29;
            this.match(ShieldParser.STRING_SINGLE);
            break;
        case ShieldParser.STRING_DOUBLE:
            localctx = new DoubleQuotedStringContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 30;
            this.match(ShieldParser.STRING_DOUBLE);
            break;
        case ShieldParser.STRING_BACKTICK:
            localctx = new TemplateStringContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 31;
            this.match(ShieldParser.STRING_BACKTICK);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SchemaDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ShieldParser.RULE_schemaDecl;
    this.name = null; // Token
    this.deviations = null; // DeviationDeclContext
    return this;
}

SchemaDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SchemaDeclContext.prototype.constructor = SchemaDeclContext;

SchemaDeclContext.prototype.ID = function() {
    return this.getToken(ShieldParser.ID, 0);
};

SchemaDeclContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

SchemaDeclContext.prototype.deviationDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DeviationDeclContext);
    } else {
        return this.getTypedRuleContext(DeviationDeclContext,i);
    }
};

SchemaDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterSchemaDecl(this);
	}
};

SchemaDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitSchemaDecl(this);
	}
};

SchemaDeclContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitSchemaDecl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ShieldParser.SchemaDeclContext = SchemaDeclContext;

ShieldParser.prototype.schemaDecl = function() {

    var localctx = new SchemaDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ShieldParser.RULE_schemaDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 34;
        this.match(ShieldParser.T__1);
        this.state = 35;
        localctx.name = this.match(ShieldParser.ID);
        this.state = 36;
        this.match(ShieldParser.T__2);
        this.state = 42;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ShieldParser.T__6) | (1 << ShieldParser.T__8) | (1 << ShieldParser.T__9) | (1 << ShieldParser.ID))) !== 0)) {
            this.state = 37;
            this.stmt();
            this.state = 38;
            this.match(ShieldParser.T__3);
            this.state = 44;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 48;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===ShieldParser.T__5) {
            this.state = 45;
            localctx.deviations = this.deviationDecl();
            this.state = 50;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 51;
        this.match(ShieldParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DeviationDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ShieldParser.RULE_deviationDecl;
    this.name = null; // Token
    this.deviations = null; // DeviationDeclContext
    return this;
}

DeviationDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DeviationDeclContext.prototype.constructor = DeviationDeclContext;

DeviationDeclContext.prototype.ID = function() {
    return this.getToken(ShieldParser.ID, 0);
};

DeviationDeclContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

DeviationDeclContext.prototype.deviationDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DeviationDeclContext);
    } else {
        return this.getTypedRuleContext(DeviationDeclContext,i);
    }
};

DeviationDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterDeviationDecl(this);
	}
};

DeviationDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitDeviationDecl(this);
	}
};

DeviationDeclContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitDeviationDecl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ShieldParser.DeviationDeclContext = DeviationDeclContext;

ShieldParser.prototype.deviationDecl = function() {

    var localctx = new DeviationDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ShieldParser.RULE_deviationDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 53;
        this.match(ShieldParser.T__5);
        this.state = 54;
        localctx.name = this.match(ShieldParser.ID);
        this.state = 55;
        this.match(ShieldParser.T__2);
        this.state = 61;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ShieldParser.T__6) | (1 << ShieldParser.T__8) | (1 << ShieldParser.T__9) | (1 << ShieldParser.ID))) !== 0)) {
            this.state = 56;
            this.stmt();
            this.state = 57;
            this.match(ShieldParser.T__3);
            this.state = 63;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 67;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===ShieldParser.T__5) {
            this.state = 64;
            localctx.deviations = this.deviationDecl();
            this.state = 69;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 70;
        this.match(ShieldParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ShieldParser.RULE_stmt;
    return this;
}

StmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StmtContext.prototype.constructor = StmtContext;


 
StmtContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ForbidStmtContext(parser, ctx) {
	StmtContext.call(this, parser);
    this._ID = null; // Token;
    this.names = []; // of Tokens;
    StmtContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ForbidStmtContext.prototype = Object.create(StmtContext.prototype);
ForbidStmtContext.prototype.constructor = ForbidStmtContext;

ShieldParser.ForbidStmtContext = ForbidStmtContext;

ForbidStmtContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ShieldParser.ID);
    } else {
        return this.getToken(ShieldParser.ID, i);
    }
};

ForbidStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterForbidStmt(this);
	}
};

ForbidStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitForbidStmt(this);
	}
};

ForbidStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitForbidStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function DeleteStmtContext(parser, ctx) {
	StmtContext.call(this, parser);
    this._ID = null; // Token;
    this.names = []; // of Tokens;
    StmtContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DeleteStmtContext.prototype = Object.create(StmtContext.prototype);
DeleteStmtContext.prototype.constructor = DeleteStmtContext;

ShieldParser.DeleteStmtContext = DeleteStmtContext;

DeleteStmtContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ShieldParser.ID);
    } else {
        return this.getToken(ShieldParser.ID, i);
    }
};

DeleteStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterDeleteStmt(this);
	}
};

DeleteStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitDeleteStmt(this);
	}
};

DeleteStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitDeleteStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function FieldDeclStmtContext(parser, ctx) {
	StmtContext.call(this, parser);
    this.name = null; // Token;
    this.required = null; // Token;
    StmtContext.prototype.copyFrom.call(this, ctx);
    return this;
}

FieldDeclStmtContext.prototype = Object.create(StmtContext.prototype);
FieldDeclStmtContext.prototype.constructor = FieldDeclStmtContext;

ShieldParser.FieldDeclStmtContext = FieldDeclStmtContext;

FieldDeclStmtContext.prototype.ID = function() {
    return this.getToken(ShieldParser.ID, 0);
};

FieldDeclStmtContext.prototype.constraint = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ConstraintContext);
    } else {
        return this.getTypedRuleContext(ConstraintContext,i);
    }
};

FieldDeclStmtContext.prototype.orClause = function() {
    return this.getTypedRuleContext(OrClauseContext,0);
};
FieldDeclStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterFieldDeclStmt(this);
	}
};

FieldDeclStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitFieldDeclStmt(this);
	}
};

FieldDeclStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitFieldDeclStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function AllowStmtContext(parser, ctx) {
	StmtContext.call(this, parser);
    this._ID = null; // Token;
    this.names = []; // of Tokens;
    StmtContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AllowStmtContext.prototype = Object.create(StmtContext.prototype);
AllowStmtContext.prototype.constructor = AllowStmtContext;

ShieldParser.AllowStmtContext = AllowStmtContext;

AllowStmtContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ShieldParser.ID);
    } else {
        return this.getToken(ShieldParser.ID, i);
    }
};

AllowStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterAllowStmt(this);
	}
};

AllowStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitAllowStmt(this);
	}
};

AllowStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitAllowStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};



ShieldParser.StmtContext = StmtContext;

ShieldParser.prototype.stmt = function() {

    var localctx = new StmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ShieldParser.RULE_stmt);
    var _la = 0; // Token type
    try {
        this.state = 106;
        switch(this._input.LA(1)) {
        case ShieldParser.T__6:
            localctx = new AllowStmtContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 72;
            this.match(ShieldParser.T__6);

            this.state = 73;
            localctx._ID = this.match(ShieldParser.ID);
            localctx.names.push(localctx._ID);
            this.state = 74;
            this.match(ShieldParser.T__7);
            this.state = 76;
            localctx._ID = this.match(ShieldParser.ID);
            localctx.names.push(localctx._ID);
            break;
        case ShieldParser.T__8:
            localctx = new DeleteStmtContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 77;
            this.match(ShieldParser.T__8);

            this.state = 78;
            localctx._ID = this.match(ShieldParser.ID);
            localctx.names.push(localctx._ID);
            this.state = 79;
            this.match(ShieldParser.T__7);
            this.state = 81;
            localctx._ID = this.match(ShieldParser.ID);
            localctx.names.push(localctx._ID);
            break;
        case ShieldParser.T__9:
            localctx = new ForbidStmtContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 82;
            this.match(ShieldParser.T__9);

            this.state = 83;
            localctx._ID = this.match(ShieldParser.ID);
            localctx.names.push(localctx._ID);
            this.state = 84;
            this.match(ShieldParser.T__7);
            this.state = 86;
            localctx._ID = this.match(ShieldParser.ID);
            localctx.names.push(localctx._ID);
            break;
        case ShieldParser.ID:
            localctx = new FieldDeclStmtContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 87;
            localctx.name = this.match(ShieldParser.ID);
            this.state = 89;
            _la = this._input.LA(1);
            if(_la===ShieldParser.T__10) {
                this.state = 88;
                localctx.required = this.match(ShieldParser.T__10);
            }

            this.state = 104;
            _la = this._input.LA(1);
            if(_la===ShieldParser.T__11) {
                this.state = 91;
                this.match(ShieldParser.T__11);
                this.state = 97;
                this._errHandler.sync(this);
                var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
                while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                    if(_alt===1) {
                        this.state = 92;
                        this.constraint(0);
                        this.state = 93;
                        this.match(ShieldParser.T__7); 
                    }
                    this.state = 99;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
                }

                this.state = 100;
                this.constraint(0);
                this.state = 102;
                _la = this._input.LA(1);
                if(_la===ShieldParser.T__12) {
                    this.state = 101;
                    this.orClause();
                }

            }

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OrClauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ShieldParser.RULE_orClause;
    return this;
}

OrClauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OrClauseContext.prototype.constructor = OrClauseContext;

OrClauseContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

OrClauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterOrClause(this);
	}
};

OrClauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitOrClause(this);
	}
};

OrClauseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitOrClause(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ShieldParser.OrClauseContext = OrClauseContext;

ShieldParser.prototype.orClause = function() {

    var localctx = new OrClauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, ShieldParser.RULE_orClause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.match(ShieldParser.T__12);
        this.state = 109;
        this.expr();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConstraintContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ShieldParser.RULE_constraint;
    return this;
}

ConstraintContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConstraintContext.prototype.constructor = ConstraintContext;


 
ConstraintContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function AlternateConstraintsContext(parser, ctx) {
	ConstraintContext.call(this, parser);
    this.left = null; // ConstraintContext;
    this.right = null; // ConstraintContext;
    ConstraintContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AlternateConstraintsContext.prototype = Object.create(ConstraintContext.prototype);
AlternateConstraintsContext.prototype.constructor = AlternateConstraintsContext;

ShieldParser.AlternateConstraintsContext = AlternateConstraintsContext;

AlternateConstraintsContext.prototype.constraint = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ConstraintContext);
    } else {
        return this.getTypedRuleContext(ConstraintContext,i);
    }
};
AlternateConstraintsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.enterAlternateConstraints(this);
	}
};

AlternateConstraintsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ShieldListener ) {
        listener.exitAlternateConstraints(this);
	}
};

AlternateConstraintsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ShieldVisitor ) {
        return visitor.visitAlternateConstraints(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function TypeConstraintContext(parser, ctx) {
	ConstraintContext.call(this, parser);
    this.type = null; // Token;
    ConstraintContext.prototype.copyFrom.call(this, ctx);
    return this;
}

TypeConstraintContext.prototype = Object.create(ConstraintContext.prototype);
TypeConstraintContext.prototype.constructor = TypeConstraintContext;

ShieldParser.TypeConstraintContext = TypeConstraintContext;
